--- a/about.html
+++ b/about.html
@@ -14,6 +14,5 @@
 <body>
     <h2> about page </h2>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam libero, minima incidunt voluptatum itaque distinctio voluptatem nesciunt error. Odio quidem tenetur dolor, in quia accusantium perferendis assumenda iure at dolorum!</p>
-</body>
+    <p>Lorem ipsum dolor</body>
 </html>
